<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"  android:animateLayoutChanges="true">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="225dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/language"
            android:id="@+id/textView"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/region"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/logo"
                android:paddingBottom="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/ed_username"
                    android:hint="@string/login_name"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/ed_passworld"
                    android:hint="@string/login_pass"/>
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lưu mật khẩu"
                android:id="@+id/checkBox"
                android:checked="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/btn_login" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singup"
                    android:id="@+id/btn_res" />




            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
